# soma

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SOMA_ARCHITECTURE.md  SOMA_VISION.md  docker-compose.yml  soma.toml
.github/workflows/: ci.yml  release.yml
crates/soma-bench/: Cargo.toml
crates/soma-bench/data/: README.md
crates/soma-bench/src/: ablation.rs  lib.rs  loader.rs  metrics.rs  runner.rs  temporal.rs
crates/soma-bio/: Cargo.toml
crates/soma-bio/src/: lib.rs  scheduler.rs
crates/soma-cli/: Cargo.toml
crates/soma-cli/benches/: ruler_bench.rs
crates/soma-cli/src/: main.rs
crates/soma-cli/tests/: ruler_test.rs
crates/soma-core/: Cargo.toml
crates/soma-core/src/: channel.rs  config.rs  edge.rs  error.rs  hybrid.rs  ids.rs  lib.rs  node.rs  query.rs
crates/soma-cypher/: Cargo.toml
crates/soma-cypher/src/: ast.rs  executor.rs  lexer.rs  lib.rs  parser.rs
crates/soma-graph/: Cargo.toml
crates/soma-graph/benches/: graph_bench.rs
crates/soma-graph/src/: community.rs  csr.rs  graph.rs  lib.rs  stats.rs  traversal.rs
crates/soma-hdc/: Cargo.toml
crates/soma-hdc/benches/: hdc_bench.rs
crates/soma-hdc/src/: engine.rs  lib.rs  storage.rs
crates/soma-http/: Cargo.toml  dashboard.html
crates/soma-http/src/: lib.rs  routes.rs  webhooks.rs
crates/soma-ingest/: Cargo.toml
crates/soma-ingest/benches/: ingest_bench.rs
crates/soma-ingest/src/: chunker.rs  code.rs  lib.rs  ner.rs  patterns.rs  pipeline.rs  plugin.rs  source.rs
crates/soma-llm/: Cargo.toml
crates/soma-llm/src/: client.rs  lib.rs  prompt.rs  types.rs
crates/soma-mcp/: Cargo.toml
crates/soma-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/soma-store/: Cargo.toml
crates/soma-store/src/: lib.rs  snapshot.rs  store.rs  wal.rs
crates/soma-watch/: Cargo.toml
crates/soma-watch/src/: lib.rs
python/soma-memory/: README.md  pyproject.toml
python/soma-memory/soma_memory/: __init__.py  client.py
tests/fixtures/: corpus.txt
