[package]
name = "soma-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — Fundamental types (NodeId, EdgeId, Channel, SomaNode, StigreEdge)"

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
