[package]
name    = "soma-cypher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
soma-core  = { path = "../soma-core" }
soma-graph = { path = "../soma-graph" }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
