[package]
name = "soma-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — Living knowledge graph with natural decay"

[dependencies]
soma-core  = { workspace = true }
petgraph   = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "graph_bench"
harness = false
