[package]
name = "soma-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — Universal ingestion pipeline (L0/L1/L2, chunking, pattern extraction)"

[dependencies]
soma-core  = { workspace = true }
soma-graph = { workspace = true }
regex      = { workspace = true }
once_cell  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
soma-llm   = { workspace = true }
syn          = { version = "2", features = ["full", "visit"] }
quote        = "1"
proc-macro2  = { version = "1", features = ["span-locations"] }
walkdir      = "2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ingest_bench"
harness = false
