[package]
name = "soma-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — Ollama LLM client (L2 extraction + neural embeddings)"

[dependencies]
soma-core  = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
