[package]
name = "soma-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — WAL + snapshot crash-safe persistence (no ORM, no SQLite)"

[dependencies]
soma-core  = { workspace = true }
soma-graph = { workspace = true }
bincode    = { workspace = true }
zstd       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
toml       = { workspace = true }
