[package]
name = "soma-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SOMA — File watcher for auto-ingest"

[dependencies]
soma-core   = { workspace = true }
soma-graph  = { workspace = true }
soma-hdc    = { workspace = true }
soma-ingest = { workspace = true }
soma-llm    = { workspace = true }
notify      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
